# barbar

./: Cargo.toml  LICENSE  build.rs
src/: main.rs  utils.rs
src/bar/: imp.rs  mod.rs
src/custom_button/: imp.rs  mod.rs
src/resources/: bar.ui  org.gtk_rs.Bar.gschema.xml  org.gtk_rs.Todo.gschema.xml  resources.gresource.xml  task_row.ui  todo_window.ui
src/task_list/: imp.rs  mod.rs
src/task_row/: imp.rs  mod.rs
src/todo_window/: imp.rs  mod.rs
